# tasker

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: build.yaml  cppcheck.yaml
examples/: dx3d_cmds.cpp  image_processing.cpp  simple.cpp
src/private/: commands.cpp  queue.cpp  scheduler.cpp  tasker.cpp  worker_pool.cpp
src/public/: commands.hpp  queue.hpp  resource.hpp  scheduler.hpp  task.hpp  tasker.hpp  types.hpp  worker_pool.hpp
